feat: completato bozza stile card e preparazione file per routing

--- a/progetto/src/css/helper-class.css
+++ b/progetto/src/css/helper-class.css
@@ -6,6 +6,11 @@
     border: 1px solid red;
 }
 
+.border-orange {
+    border: 1px solid orange;
+}
+
+
 /******************************COLORS*****************************/
 
 .font-primary {
