--- a/progetto/src/App.css
+++ b/progetto/src/App.css
@@ -2,11 +2,8 @@
 @import url('./css/helper-class.css');
 
 
-body {
-  height: 600px;
-  background: linear-gradient(62deg, #070707, #100e0f, #0a1f27, #021813);
-    animation: gradient 15s ease infinite; 
-     background-size: 400% 400%;
+.backg-black {
+ background-color:  #100e0f;
 }
 
 .App {
