--- a/progetto/src/css/helper-class.css
+++ b/progetto/src/css/helper-class.css
@@ -184,3 +184,10 @@ a {
      background-position: 0% 50%;
   }
 }
+
+.bg-gradient{
+  height: 600px;
+  background: linear-gradient(62deg, #070707, #100e0f, #0a1f27, #021813);
+    animation: gradient 15s ease infinite; 
+     background-size: 400% 400%;
+}
