Inizio refactoring: Migliorato score CLS,inserito gli env

--- a/progetto/src/css/helper-class.css
+++ b/progetto/src/css/helper-class.css
@@ -123,9 +123,7 @@ a {
 }
 
 .hero {
-    max-width: 115%;
-    max-height: 115%;
-    display: block;
+  aspect-ratio: attr(width) / attr(height);
 }
 
 .desc-img {
