--- a/progetto/src/App.scss
+++ b/progetto/src/App.scss
@@ -1,82 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('./css/helper-class.css');
+@import url("./Components/Body/Homepage/Description/description.css");
 
-
-.backg-black {
- background-color:  #100e0f;
+/*-------------------------------------------MISCELLANEOUS----------------------------------------*/
+/* *{outline:1px solid red};
+ */
+.vh-100{height:100vh;}
+/*-------------------------------------------MISCELLANEOUS----------------------------------------*/
+.uovo :hover {
+  cursor: pointer;
+  animation: vibrate 0.3s linear both;
+}
+@keyframes vibrate {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
 }
 
-.App {
-  font-family: 'Josefin Sans', sans-serif;
+.bg-black {
+  background-color: black;
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.border-blue {
+  border: 1px solid #006ab3;
+  background-color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.scroll-container {
-    height: 100vh;
-    background: black;
-  }
-  .speak {
-    margin: 150vh 0;
-    &:first-child {
-      margin-top: -50vh;
-    }
-  }
-  
-  .speak[data-scroll] {
-    // transition: opacity .3s;
-    transform: translatey(calc(var(--viewport-y) * 30vh));
-    opacity: calc(var(--visible-y));
-    
-  }
-  
-  .scroll-sequence__content {
-    padding: 4em;
-  }
-  .scroll-sequence {
-    position: sticky;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: -5;
-    height: 100vh;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  h1 {
-    font-size: 3em;
-    width: 60wv;
-    margin-bottom: 10px;
-    @media screen and (max-width: 600px) {
-      font-size: 2em;
-      width: 100%;
-    }
-  }
-  
-  :root {
-    font-size: 20px;
-    font-family: 'Open Sans', sans-serif;
-    color: white;
-    text-shadow: 0 0 12px rgba(black, .8);
-  }
-  body {
-    margin: 0;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
+/*# sourceMappingURL=App.css.map */
