--- a/progetto/src/scss/description.scss
+++ b/progetto/src/scss/description.scss
@@ -2,5 +2,13 @@
     border:1px solid black;
     border-radius: 10px;
     box-shadow: 5px 5px 12px gray;
+    background-color: rgb(255, 255, 255);
 
 }
+
+.bg-prova {
+    background-image: url("../../../../../public/images/Asset 3@2x.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 75%;
+  }
