--- a/progetto/src/style/App.css
+++ b/progetto/src/style/App.css
@@ -1,12 +1,43 @@
-@import url("./Components/Body/Homepage/Description/description.css");
+.info-style {
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 5px 5px 12px #c7c1c9;
+  background-color: rgba(255, 255, 255, 0.501);
+  max-width: 270px;
+  max-height: 450px;
+}
+
+.bg-description {
+  border-top: 1px solid black;
+  background-image: url("../../public/images/bg-violet.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-hero {
+  background-image: url("../../public/images/bg-blue.png");
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+}
+
+.hero-title {
+  font-size: 80px;
+}
 
 /*-------------------------------------------MISCELLANEOUS----------------------------------------*/
+/* *{outline:1px solid red};
+ */
+.vh-100 {
+  height: 100vh;
+}
 
 /*-------------------------------------------MISCELLANEOUS----------------------------------------*/
 .uovo :hover {
   cursor: pointer;
   animation: vibrate 0.3s linear both;
 }
+
 @keyframes vibrate {
   0% {
     transform: translate(0);
@@ -27,7 +58,6 @@
     transform: translate(0);
   }
 }
-
 .bg-black {
   background-color: black;
 }
@@ -36,5 +66,7 @@
   border: 1px solid #006ab3;
   background-color: white;
 }
+
+/*# sourceMappingURL=App.css.map */
 
 /*# sourceMappingURL=App.css.map */
