--- a/progetto/src/style/App.scss
+++ b/progetto/src/style/App.scss
@@ -1,6 +1,6 @@
-@import url("./Components/Body/Homepage/Description/description.css");
-
-/*-------------------------------------------MISCELLANEOUS----------------------------------------*/
+@use "description";
+@use "hero";
+;/*-------------------------------------------MISCELLANEOUS----------------------------------------*/
 /* *{outline:1px solid red};
  */
 .vh-100{height:100vh;}
@@ -8,9 +8,9 @@
 .uovo :hover {
   cursor: pointer;
   animation: vibrate 0.3s linear both;
-}
+} 
 @keyframes vibrate {
-  0% {
+  0% { 
     transform: translate(0);
   }
   20% {
