--- a/progetto/src/style/App.css
+++ b/progetto/src/style/App.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap");
 .info-style {
   border: 1px solid black;
   border-radius: 10px;
@@ -14,15 +15,34 @@
   background-position: center;
 }
 
-.bg-hero {
+.hero-title {
+  font-size: 80px;
+}
+
+.bg-media {
   background-image: url("../../public/images/bg-blue.png");
+  height: 100vh;
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
 }
 
-.hero-title {
-  font-size: 80px;
+.bg-hero {
+  background-image: url("../../public/images/bg-blue.png");
+  height: 90vh;
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+}
+
+.login-button {
+  background-color: #0062b1;
+  color: white;
+  border-radius: 0.5rem;
+  border: 1px solid #0062b1;
+  font-size: 18px;
+  text-align: center;
+  padding: 1% 5%;
 }
 
 /* *{outline: 1px solid red;}
@@ -48,6 +68,8 @@
 .side-nav-links {
   background-color: white;
   border-left: 10px solid #0062b1;
+  border-right: 10px solid #0062b1;
+  font-size: 22px;
 }
 
 .newsletter {
@@ -75,11 +97,30 @@
   border-radius: 10px;
 }
 
+.join-button {
+  background-color: white;
+  color: #0062b1;
+  border: 1px solid #0062b1;
+  border-radius: 2rem;
+  font-size: 32px;
+  padding: 2% 10%;
+  max-width: 200px;
+  width: 100%;
+}
+
+.media-title {
+  font-size: 70px;
+}
+
 /*-------------------------------------------MISCELLANEOUS----------------------------------------*/
 /* *{outline:1px solid red};
  */
 .vh-100 {
   height: 100vh;
+}
+
+.App {
+  font-family: "Rajdhani", sans-serif;
 }
 
 /*-------------------------------------------MISCELLANEOUS----------------------------------------*/
@@ -112,6 +153,10 @@
   background-color: black;
 }
 
+.bg-white {
+  background-color: white;
+}
+
 .border-blue {
   border: 1px solid #006ab3;
   background-color: white;
@@ -120,9 +165,7 @@
 .link {
   color: white;
   cursor: pointer;
-  font-size: 23px;
 }
-
 .link :hover {
   color: white;
   text-decoration: none;
