--- a/progetto/src/style/App.scss
+++ b/progetto/src/style/App.scss
@@ -1,10 +1,17 @@
 @use "description";
 @use "hero";
 @use "navbar";
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
+
+
 ;/*-------------------------------------------MISCELLANEOUS----------------------------------------*/
 /* *{outline:1px solid red};
  */
 .vh-100{height:100vh;}
+
+.App{
+  font-family: 'Rajdhani', sans-serif;
+}
 /*-------------------------------------------MISCELLANEOUS----------------------------------------*/
 .uovo :hover {
   cursor: pointer;
@@ -35,6 +42,9 @@
   background-color: black;
 }
 
+.bg-white{
+  background-color: white;
+}
 .border-blue {
   border: 1px solid #006ab3;
   background-color: white;
