--- a/progetto/src/style/_hero.scss
+++ b/progetto/src/style/_hero.scss
@@ -1,10 +1,31 @@
-.bg-hero{
-    background-image: url("../../public/images/bg-blue.png");
-    background-size: cover;
-    background-position:bottom;
-    background-repeat: no-repeat;
- 
-}
+
 .hero-title{
     font-size: 80px;
 }
+
+
+.bg-media{
+    background-image: url("../../public/images/bg-blue.png");
+    height:100vh;
+    background-size: cover;
+    background-position:bottom;
+    background-repeat: no-repeat;
+}
+
+.bg-hero{
+    background-image: url("../../public/images/bg-blue.png");
+    height:90vh;
+    background-size: cover;
+    background-position:bottom;
+    background-repeat: no-repeat;
+}
+
+.login-button{
+    background-color: #0062b1;
+    color: white;
+    border-radius: 0.5rem;
+    border: 1px solid #0062b1;
+    font-size: 18px;
+    text-align: center;
+    padding: 1% 5%;
+  }
