--- a/progetto/src/App.css
+++ b/progetto/src/App.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('./css/helper-class.css');
 
-
 .backg-black {
- background-color:  #100e0f;
+  background-color: #100e0f;
 }
 
 .App {
@@ -22,4 +21,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+input::-webkit-input-placeholder {
+  color: black !important;
+}
+
+input:-moz-placeholder {
+  /* Firefox 18- */
+  color: black !important;
+}
+
+input::-moz-placeholder {
+  /* Firefox 19+ */
+  color: black !important;
+}
+
+input:-ms-input-placeholder {
+  color: black !important;
 }
