--- a/progetto/src/App.css
+++ b/progetto/src/App.css
@@ -23,3 +23,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav-vh{
+  height: 15vh;
+}
+
+.footer-vh{
+  height:30vh
+}
+
+.vh-65{
+  height:65vh
+}
+
+.color-gray{
+  background-color: #292829;
+}
+
+.accordion-button.collapsed {
+  color: #ff8a00;
+  background-color:  #282828;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+}
+
+.accordion-button:not(.collapsed) {
+  color: #ff8a00;
+  background-color: #282828;
+  box-shadow: inset 0 -1px 0 rgba(255, 221, 0, 0.13);
+}
+
+.vh-20{
+  height: 30vh;
+}
